<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name" translatable="false">MiHealth</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="bem_Vindo">Welcome !</string>
    <string name="Nome">Name</string>
    <string name="Medicamentos">Drugs</string>
    <string name="Contatos">Contacts</string>
    <string name="Telefone">Phone</string>
    <string name="Cadastrar">Register</string>
    <string name="title_activity_boas_vindas">boas_vindas</string>
    <string name="dataNasc">Date of Birth</string>
    <string name="sexo">Gender</string>
    <string name="ok" translatable="false">OK</string>
    <string name="proximo">Next</string>
    <string name="ajustes">Settings</string>
    <string name="title_activity_medicacao">medicacao</string>
    <string name="title_activity_contatos">contatos</string>
    <string name="title_activity_ajustes">ajustes</string>
    <string name="title_activity_pessoas">pessoas</string>
    <string name="title_activity_cadastro_usuario">cadastro_usuario</string>
    <string name="title_activity_lista_medic">lista_medic</string>
    <string name="title_activity_master_footer">master_footer</string>
    <string name="title_activity_lista_contato">lista_contato</string>
    <string name="title_activity_cadastrar_contato">cadastrar_contato</string>
    <string name="title_activity_cadastrar_medic">cadastrar_medic</string>
    <string name="indicacao">Suitable For</string>
    <string name="horarios">Medication Schedules</string>
    <string name="fc">Heart Rate</string>
    <string name="temperatura">Temperature</string>
    <string name="tempCorp">Body Temperature</string>
    <string name="proxMedic">Next Medication</string>
    <string name="title_activity_activity_master_top">activity_master_top</string>
    <string name="title_activity_master_top">master_top</string>
    <string name="usuario">User</string>

</resources>
