<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="10"
    android:orientation="vertical"
    tools:context="br.ufc.ubicomp.mihealth.activities.cadastro_usuario">


    <TextView
        style="@style/Theme.MyTheme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Cadastrar"
        android:id="@+id/textView12"
        android:layout_gravity="center_horizontal"
        android:textSize="@dimen/abc_text_size_display_3_material"
        android:textStyle="bold"
        android:layout_weight="2" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/Nome"
        style="@style/Theme.MyTheme"
        android:textSize="@dimen/abc_text_size_display_1_material"
        android:id="@+id/textView10"
        android:layout_weight="1" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        style="@style/Theme.MyTheme"
        android:textSize="@dimen/abc_text_size_display_1_material"
        android:id="@+id/editText"
        android:layout_weight="1" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/dataNasc"
        style="@style/Theme.MyTheme"
        android:textSize="@dimen/abc_text_size_display_1_material"
        android:id="@+id/textView11"
        android:layout_weight="1" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="date"
        android:ems="10"
        style="@style/Theme.MyTheme"
        android:textSize="@dimen/abc_text_size_display_1_material"
        android:id="@+id/editText7"
        android:layout_weight="1" />

    <RadioGroup
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="3"
        android:layout_weight="2">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/sexo"
            style="@style/Theme.MyTheme"
            android:textSize="@dimen/abc_text_size_display_1_material"
            android:id="@+id/textView2"
            android:layout_weight="1" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="F"
            style="@style/Theme.MyTheme"
            android:textSize="@dimen/abc_text_size_display_1_material"
            android:textStyle="bold"
            android:id="@+id/radioButton2"
            android:layout_weight="1" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="M"
            style="@style/Theme.MyTheme"
            android:textSize="@dimen/abc_text_size_display_1_material"
            android:textStyle="bold"
            android:id="@+id/radioButton3"/>

    </RadioGroup>

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/ok"
        android:background="@android:color/holo_green_light"
        android:id="@+id/butOk"
        android:layout_weight="2"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        android:textSize="@dimen/abc_text_size_display_1_material"
        android:onClick="onClick"
        android:enabled="false"
        android:focusable="false"
        android:focusableInTouchMode="false" />

    <LinearLayout
        style="@android:style/ButtonBar"
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/linearLayout"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:minHeight="@dimen/abc_action_bar_default_height_material"
        android:background="@color/colorPrimary"
        android:alpha="1"
        android:focusable="false"
        android:weightSum="4" >

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imageButton"
            android:text="Send to Service"
            android:onClick="onClick"
            android:src="@mipmap/ic_action_person"
            android:layout_weight="1"
            android:background="@android:color/transparent" />

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imageButton2"
            android:src="@mipmap/ic_action_new"
            android:text="Send to Service"
            android:onClick="onClick"
            android:contentDescription="@string/Medicamentos"
            android:layout_weight="1"
            android:background="@android:color/transparent" />

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imageButton3"
            android:src="@mipmap/ic_action_add_person"
            android:text="Send to Service"
            android:onClick="onClick"
            android:contentDescription="@string/Contatos"
            android:layout_weight="1"
            android:background="@android:color/transparent" />

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:id="@+id/imageButton4"
            android:src="@mipmap/ic_action_settings"
            android:text="Send to Service"
            android:onClick="onClick"
            android:contentDescription="@string/ajustes"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:focusable="false" />
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="bottom"
        android:layout_weight="2">

    </LinearLayout>
</LinearLayout>
