<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="10"
    android:orientation="vertical"
    tools:context="br.ufc.ubicomp.mihealth.activities.cadastro_usuario">


    <TextView
        style="@style/Theme.MyTheme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Cadastrar"
        android:id="@+id/textView12"
        android:layout_gravity="center_horizontal"
        android:textSize="@dimen/abc_text_size_display_3_material"
        android:textStyle="bold"
        android:layout_weight="2" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/Nome"
        style="@style/Theme.MyTheme"
        android:textSize="@dimen/abc_text_size_display_1_material"
        android:id="@+id/textView10"
        android:layout_weight="1" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        style="@style/Theme.MyTheme"
        android:textSize="@dimen/abc_text_size_display_1_material"
        android:id="@+id/editText"
        android:layout_weight="1" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/dataNasc"
        style="@style/Theme.MyTheme"
        android:textSize="@dimen/abc_text_size_display_1_material"
        android:id="@+id/textView11"
        android:layout_weight="1" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="date"
        android:ems="10"
        style="@style/Theme.MyTheme"
        android:textSize="@dimen/abc_text_size_display_1_material"
        android:id="@+id/editText7"
        android:layout_weight="1" />

    <RadioGroup
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="3"
        android:layout_weight="2">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/sexo"
            style="@style/Theme.MyTheme"
            android:textSize="@dimen/abc_text_size_display_1_material"
            android:id="@+id/textView2"
            android:layout_weight="1" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="F"
            style="@style/Theme.MyTheme"
            android:textSize="@dimen/abc_text_size_display_1_material"
            android:textStyle="bold"
            android:id="@+id/radioButton2"
            android:layout_weight="1" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="M"
            style="@style/Theme.MyTheme"
            android:textSize="@dimen/abc_text_size_display_1_material"
            android:textStyle="bold"
            android:id="@+id/radioButton3"/>

    </RadioGroup>

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/ok"
        android:background="@android:color/holo_green_light"
        android:id="@+id/butOk"
        android:layout_weight="2"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        android:textSize="@dimen/abc_text_size_display_1_material"
        android:onClick="onClick"
        android:enabled="false"
        android:focusable="false"
        android:focusableInTouchMode="false" />

    <include
        android:id="@+id/rodape_view"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        layout="@layout/activity_master_footer" />


</LinearLayout>
