<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:weightSum="10"
    tools:context="br.ufc.ubicomp.mihealth.activities.MedicinesActivity">



        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/Medicamentos"
            android:id="@+id/textView13"
            android:textSize="@dimen/abc_text_size_display_3_material"
            android:layout_weight="1"
            style="@style/Theme.MyTheme"
            android:textStyle="bold"
            android:layout_gravity="center_horizontal"
            />

        <ScrollView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/scrollView"
            android:layout_weight="9"
            android:fillViewport="true">

            <ListView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/listView" />
        </ScrollView>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:weightSum="2"
            android:background="@color/colorAccent"
            android:baselineAligned="false"
            android:layout_weight="0"
            android:gravity="center_vertical">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ok"
                android:id="@+id/button2"
                android:layout_weight="1"
                android:textColor="@android:color/white"
                android:textStyle="bold"
                android:textSize="@dimen/abc_text_size_display_1_material"
                android:alpha="1"
                android:background="@android:color/transparent" />

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:id="@+id/button3"
                android:src="@mipmap/ic_action_new"
                android:layout_weight="1"
                android:alpha="1"
                android:background="@android:color/transparent" />
        </LinearLayout>
    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/b_tb"
        android:orientation="horizontal"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:minHeight="@dimen/abc_action_bar_default_height_material"
        android:background="@color/colorPrimary"
        android:alpha="1"
        android:focusable="false"
        style="@android:style/ButtonBar"
        android:weightSum="4"
        tools:context="br.ufc.ubicomp.mihealth.activities.master_footer">


        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/dados_usuario"
            android:onClick="onClick"
            android:src="@mipmap/ic_action_person"
            android:contentDescription="@string/usuario"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            />

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/cad_med"
            android:src="@mipmap/ic_action_new"
            android:onClick="onClick"
            android:contentDescription="@string/Medicamentos"
            android:layout_weight="1"
            android:background="@android:color/transparent" />

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/cad_cont"
            android:src="@mipmap/ic_action_add_person"
            android:onClick="onClick"
            android:contentDescription="@string/Contatos"
            android:layout_weight="1"
            android:background="@android:color/transparent" />
        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/ajustes"
            android:src="@mipmap/ic_action_settings"
            android:onClick="onClick"
            android:contentDescription="@string/ajustes"
            android:layout_weight="1"
            android:background="@android:color/transparent" />



    </LinearLayout>
</LinearLayout>
