<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    tools:context=".MainActivity"
    android:layout_weight="10"
    android:orientation="vertical"
    android:weightSum="6">

        <include
        android:id="@+id/top_view"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
            layout="@layout/activity_master_top"
            android:layout_weight="1" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:id="@+id/textView"
            android:layout_gravity="center_horizontal"
            android:textSize="@dimen/abc_text_size_display_3_material"
            android:layout_weight="1"
            style="@style/Theme.MyTheme"
            android:textStyle="bold" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:weightSum="2"
            android:layout_weight="2"
            android:baselineAligned="false">

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:orientation="vertical"
                android:layout_weight="1"
                android:padding="@dimen/abc_text_size_body_1_material"
                android:background="@drawable/back1">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fc"
                    android:id="@+id/textViewFC"
                    android:layout_gravity="center_horizontal|top"
                    style="@style/Theme.MyTheme" />

                <EditText
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/editTextFC"
                    android:layout_gravity="center"
                    style="@style/Theme.MyTheme"
                    android:textStyle="bold"
                    android:textSize="@dimen/abc_text_size_display_3_material"
                    android:text="70"
                    android:gravity="center_horizontal" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="bpm"
                    android:id="@+id/textView4"
                    android:layout_gravity="center_horizontal|bottom"
                    style="@style/Theme.MyTheme" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:orientation="vertical"
                android:layout_weight="1"
                android:background="@drawable/back1"
                android:padding="@dimen/abc_text_size_body_1_material">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/temperatura"
                    android:id="@+id/textViewTemperatura"
                    android:layout_gravity="center_horizontal|top"
                    style="@style/Theme.MyTheme" />
                <EditText
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/editTextTemperatura"
                    android:layout_gravity="center"
                    style="@style/Theme.MyTheme"
                    android:textSize="@dimen/abc_text_size_display_3_material"
                    android:text="28"
                    android:textStyle="bold"
                    android:gravity="center_horizontal" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="ºC"
                    android:id="@+id/textView7"
                    android:layout_gravity="center_horizontal|bottom"
                    style="@style/Theme.MyTheme" />

            </LinearLayout>


        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:weightSum="2"
            android:layout_weight="2"
            android:baselineAligned="false">

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:orientation="vertical"
                android:layout_weight="1"
                android:background="@drawable/back1"
                android:padding="@dimen/abc_text_size_body_1_material">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/proxMedic"
                    android:id="@+id/textViewProxMedic"
                    android:layout_gravity="center_horizontal|top"
                    style="@style/Theme.MyTheme" />

                <EditText
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/editTextProxMedic"
                    android:layout_gravity="center"
                    android:text="Diazepan"
                    android:gravity="center_horizontal"
                    android:textStyle="bold" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/editTextProxMedic2"
                    android:text="20hs"
                    android:gravity="center_horizontal"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:orientation="vertical"
                android:layout_weight="1"
                android:background="@drawable/back1"
                android:padding="@dimen/abc_text_size_body_1_material"
                >



                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tempCorp"
                    android:id="@+id/textViewTempCorp"
                    android:layout_gravity="center_horizontal|top"
                    style="@style/Theme.MyTheme" />

                <EditText
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/editTextTempCorp"
                    android:layout_gravity="center"
                    style="@style/Theme.MyTheme"
                    android:textStyle="bold"
                    android:textSize="@dimen/abc_text_size_display_3_material"
                    android:text="38"
                    android:gravity="center_horizontal" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="ºC"
                    android:id="@+id/textView8"
                    android:layout_gravity="center_horizontal|bottom"
                    style="@style/Theme.MyTheme" />
            </LinearLayout>

        </LinearLayout>
<include
        android:id="@+id/rodape_view"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
    layout="@layout/activity_master_footer"
    android:layout_weight="1" />

</LinearLayout>


